fix: annoying white focus flash on mobile menu button

--- a/packages/gatsby-theme-carbon/src/components/Header/Header.module.scss
+++ b/packages/gatsby-theme-carbon/src/components/Header/Header.module.scss
@@ -17,15 +17,6 @@ header.header {
   top: -48px;
 }
 
-.header :global(.bx--header__action--menu) {
-  border: none;
-  top: 0.5px;
-  position: relative;
-  @include carbon--breakpoint('lg') {
-    display: none;
-  }
-}
-
 .header :global(.bx--header__name) {
   @include carbon--type-style('body-short-02');
   @include carbon--breakpoint('lg') {
@@ -33,9 +24,23 @@ header.header {
   }
 }
 
+.header :global(.bx--header__action--menu) {
+  border: none;
+  // border-right: 3px solid transparent !important;
+  top: 0.5px;
+  position: relative;
+  &:focus {
+    border: 3px solid $inverse-01;
+    border-right: 3px solid $inverse-01 !important;
+  }
+  @include carbon--breakpoint('lg') {
+    display: none;
+  }
+}
+
 .header :global(.bx--header__action--menu.bx--header__action--active) {
   background-color: $ui-05;
-  border-right: 1px solid $inverse-02;
+  border-right: 1px solid $inverse-02 !important;
   @include carbon--breakpoint('lg') {
     display: none;
   }
